updateStatusProduct